@@ -2,66 +2,82 @@ package site.petful.campaignservice.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;;
+import org.springframework.transaction.annotation.Transactional;
 import site.petful.campaignservice.client.AdvertiserFeignClient;
+import site.petful.campaignservice.client.PetFeignClient;
+import site.petful.campaignservice.common.ApiResponse;
 import site.petful.campaignservice.common.ErrorCode;
+import site.petful.campaignservice.dto.advertisement.AdResponse;
 import site.petful.campaignservice.dto.campaign.ApplicantResponse;
-import site.petful.campaignservice.dto.campaign.ApplicantsResponse;
 import site.petful.campaignservice.dto.campaign.ApplicantRequest;
-import site.petful.campaignservice.dto.campaign.PetResponse;
+import site.petful.campaignservice.dto.PetResponse;
+import site.petful.campaignservice.dto.campaign.ApplicantsResponse;
 import site.petful.campaignservice.entity.Applicant;
 import site.petful.campaignservice.entity.ApplicantStatus;
-import site.petful.campaignservice.entity.advertisement.Advertisement;
-import site.petful.campaignservice.repository.AdRepository;
 import site.petful.campaignservice.repository.CampaignRepository;
-import site.petful.campaignservice.repository.PetRepository;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class CampaignService {
 
     public final CampaignRepository campaignRepository;
-    public final AdRepository adRepository;
     private final AdvertiserFeignClient advertiserFeignClient;
-    private final PetRepository petRepository;
+    private final PetFeignClient petFeignClient;
 
     // 1. 체험단 신청
     public ApplicantResponse applyCampaign(Long adNo, Long petNo, ApplicantRequest request) {
 
-        Advertisement ad = adRepository.findByAdNo(adNo)
-                .orElseThrow(() -> new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage()));
+        ApiResponse<AdResponse> adResponse = advertiserFeignClient.getAd(adNo);
+        if (adResponse == null || adResponse.getData() == null) {
+            throw new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage());
+        }
+
+        ApiResponse<PetResponse> petResponse = petFeignClient.getPet(petNo);
+        PetResponse pet = petResponse.getData();
 
         Applicant applicant = new Applicant();
-        applicant.setAdvertisement(ad);
+        applicant.setAdNo(adNo);
         applicant.setPetNo(petNo);
         applicant.setContent(request.getContent());
         applicant.setStatus(applicant.getStatus() == null ? ApplicantStatus.APPLIED : applicant.getStatus());
         Applicant saved = campaignRepository.save(applicant);
 
-        PetResponse petResponse = petRepository.findByPetNo(petNo);
-
         // advertiser의 applicants 1 증가
         advertiserFeignClient.updateAdByCampaign(adNo, 1);
 
-        return ApplicantResponse.from(saved, petResponse);
+        return ApplicantResponse.from(saved, pet);
     }
 
     // 2. 광고별 체험단 전체 조회 - 광고주
+    @Transactional(readOnly = true)
     public ApplicantsResponse getApplicants(Long adNo) {
-        Advertisement ad = adRepository.findByAdNo(adNo)
-                .orElseThrow(() -> new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage()));
+        ApiResponse<AdResponse> adResponse = advertiserFeignClient.getAd(adNo);
+        if (adResponse == null || adResponse.getData() == null) {
+            throw new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage());
+        }
 
-        List<Applicant> applicants = campaignRepository.findByAdvertisement_AdNo(adNo);
+        List<Applicant> applicants = campaignRepository.findByAdNo(adNo);
 
         List<Long> petNos = applicants.stream()
                 .map(Applicant::getPetNo)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
-        List<PetResponse> pets = petRepository.findByPetNos(petNos);
+        List<PetResponse> pets = petNos.stream()
+                .map(petNo -> {
+                    ApiResponse<PetResponse> response = petFeignClient.getPet(petNo);
+                    return response != null ? response.getData() : null;
+                })
+                .filter(Objects::nonNull)
+                .toList();
+
+
         Map<Long, PetResponse> petMap = pets.stream()
                 .collect(Collectors.toMap(PetResponse::getPetNo, pet -> pet));
 
@@ -81,9 +97,10 @@ public class CampaignService {
         applicant.setContent(request.getContent());
         Applicant saved = campaignRepository.save(applicant);
 
-        PetResponse petResponse = petRepository.findByPetNo(saved.getPetNo());
+        ApiResponse<PetResponse> petResponse = petFeignClient.getPet(saved.getPetNo());
+        PetResponse pet = petResponse.getData();
 
-        return ApplicantResponse.from(saved, petResponse);
+        return ApplicantResponse.from(saved, pet);
     }
 
 
@@ -96,9 +113,10 @@ public class CampaignService {
         applicant.setStatus(status);
         Applicant saved = campaignRepository.save(applicant);
 
-        PetResponse petResponse = petRepository.findByPetNo(saved.getPetNo());
+        ApiResponse<PetResponse> petResponse = petFeignClient.getPet(saved.getPetNo());
+        PetResponse pet = petResponse.getData();
 
-        return ApplicantResponse.from(saved, petResponse);
+        return ApplicantResponse.from(saved, pet);
     }
 
     // 4. 체험단 신청 취소(삭제)
@@ -108,5 +126,8 @@ public class CampaignService {
                 .orElseThrow(() -> new RuntimeException(ErrorCode.APPLICANT_NOT_FOUND.getDefaultMessage()));
 
         campaignRepository.delete(applicant);
+
+        // advertiser의 applicants 1 감소
+        advertiserFeignClient.updateAdByCampaign(applicant.getAdNo(), -1);
     }
 }
